--- a/app/src/main/res/layout/fragment_capture_visitor_details.xml
+++ b/app/src/main/res/layout/fragment_capture_visitor_details.xml
@@ -102,6 +102,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginTop="8dp"
                 android:hint="Enter mobile Number"
                 app:boxStrokeColor="@color/colorPrimaryDark"
@@ -125,6 +126,7 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_marginTop="8dp"
                 android:hint="Enter House Number"
                 app:boxStrokeColor="@color/colorPrimaryDark"
@@ -150,6 +152,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:visibility="gone"
                 android:hint="Enter Street"
                 app:boxStrokeColor="@color/colorPrimaryDark"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -174,6 +177,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:visibility="gone"
                 android:hint="Enter car registration"
                 app:boxStrokeColor="@color/colorPrimaryDark"
                 app:layout_constraintEnd_toEndOf="parent"
