--- a/app/src/main/res/layout/custom_supervisor_dialog.xml
+++ b/app/src/main/res/layout/custom_supervisor_dialog.xml
@@ -51,6 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
+            android:inputType="numberPassword"
             android:maxLength="4"
             android:textSize="16sp" />
 
