--- a/app/src/main/res/layout/fragment_guard_login.xml
+++ b/app/src/main/res/layout/fragment_guard_login.xml
@@ -25,6 +25,7 @@
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="numberPassword"
             android:lines="1"
             android:maxLength="4"
             android:textSize="16sp" />
